--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ readme = "README.md"
 requires-python = "==3.12.*"
 dependencies = [
     "httpx==0.28.*",
-    "pydantic==2.11.*"
+    "pydantic==2.11.*",
+    "beautifulsoup4>=4.13.0",
 ]
 
 [dependency-groups]
