--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = "==3.12.*"
 dependencies = [
     "httpx==0.28.*",
     "pydantic==2.11.*",
+    "pydantic-settings==2.10.*",
     "beautifulsoup4>=4.13.0",
 ]
 
@@ -19,6 +20,7 @@ dev = [
     "invoke>=2.2.0",
     "pytest-cov>=6.2.0",
     "pytest-socket>=0.7.0",
+    "types-PyYAML",
 ]
 
 [tool.uv]
