--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "pydantic==2.11.*",
     "pydantic-settings==2.10.*",
     "beautifulsoup4>=4.13.0",
+    "python-telegram-bot==22.*"
 ]
 
 [dependency-groups]
@@ -21,6 +22,7 @@ dev = [
     "pytest-cov>=6.2.0",
     "pytest-socket>=0.7.0",
     "types-PyYAML",
+    "types-pytz"
 ]
 
 [tool.uv]
