--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "bueze-mittagstisch-notifier"
-version = "0.1.0"
+version = "0.1.1"
 description = "Notifications of the weekly BüZe Mittagstisch menu"
 readme = "README.md"
 requires-python = "==3.12.*"
@@ -18,6 +18,7 @@ dev = [
     "coverage==7.*",
     "ruff==0.6.*",
     "mypy==1.15.*",
+    "respx==0.22.*",
     "invoke>=2.2.0",
     "pytest-cov>=6.2.0",
     "pytest-socket>=0.7.0",
