--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "bueze-mittagstisch-notifier"
-version = "0.1.1"
+version = "0.1.2"
 description = "Notifications of the weekly BüZe Mittagstisch menu"
 readme = "README.md"
 requires-python = "==3.12.*"
@@ -22,6 +22,7 @@ dev = [
     "invoke>=2.2.0",
     "pytest-cov>=6.2.0",
     "pytest-socket>=0.7.0",
+    "pytest-asyncio==1.1.*",
     "types-PyYAML",
     "types-pytz"
 ]
