--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,10 @@ select = ["E", "F", "I", "PD", "DTZ", "ASYNC", "S", "N", "PT"]
 # Never enforce `E501` (line length violations).
 "*" = ["E501"]
 
+[tool.ruff.lint.pep8-naming]
+# Allow Pydantic's `@validator` decorator to trigger class method treatment.
+classmethod-decorators = ["classmethod", "pydantic.field_validator"]
+
 [tool.mypy]
 files = ["bueze_mittagstisch_notifier", "tests"]
 strict = true
