add test pull request and check version raise action

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "bueze-mittagstisch-notifier"
-version = "0.2.0"
+version = "0.3.0"
 description = "Notifications of the weekly BüZe Mittagstisch menu"
 readme = "README.md"
 requires-python = "==3.12.*"
@@ -24,7 +24,8 @@ dev = [
     "pytest-socket>=0.7.0",
     "pytest-asyncio==1.1.*",
     "types-PyYAML",
-    "types-pytz"
+    "types-pytz",
+    "types-setuptools"
 ]
 
 [tool.uv]
@@ -55,11 +56,9 @@ files = ["bueze_mittagstisch_notifier", "tests"]
 strict = true
 implicit_reexport = true
 ignore_missing_imports = true
-#non_interactive = true
 enable_error_code = ["ignore-without-code"]
 plugins = ["pydantic.mypy"]
-install_types = true
-
+install_types = false
 disallow_untyped_defs = true
 check_untyped_defs = true
 warn_return_any = true
