add action to push image to DockerHub on merge into main

--- a/development/example.env
+++ b/development/example.env
@@ -1,7 +1,6 @@
 UV_DEFAULT_INDEX=
-
 BUEZE__PAGE_URL=
 TELEGRAM__BOT__NAME=
 TELEGRAM__BOT__TOKEN=
 TELEGRAM__CHANNEL_ID=
-FILENAMES_STORAGE__PATH=
+MENU_ARCHIVE__NAME=
