--- a/.github/workflows/build_and_push_docker_image.yml
+++ b/.github/workflows/build_and_push_docker_image.yml
@@ -1,11 +1,6 @@
 name: Build and Push Docker image
-#on:
-#  push:
-#    branches:
-#      - main
-
 on:
-  pull_request:
+  push:
     branches:
       - main
 
